Benchmarking changes that allow for AccpPanama to be added as a provider in the Params. Needs the built jar passed in as an argument as seen in the build file.